# python_package_cookiecutter

./: .gitignore  README.md  cookiecutter.json
.github/workflows/: ci.yml
{{cookiecutter.pkg_name}}/: README.md  pyproject.toml  {{cookiecutter.pkg_name}}_scripts.py
{{cookiecutter.project_slug}}/: HISTORY.md  README.md  pyproject.toml  {{cookiecutter.project_slug}}_scripts.py
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.repo_name}}/: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  README.md  __init__.py  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: ci.yml  greetings.yml
{{cookiecutter.repo_name}}/scripts/: check_style.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_slug}}/scripts/: myexecutable.py
