[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>", ]
license = "MIT"
readme = "README.md"

homepage = "TODO"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}"
classifiers = [ "Programming Language :: Python :: 3.6",
                "Programming Language :: Python :: 3.7",
                "Programming Language :: Python :: 3.8",
                "License :: Other/Proprietary License",
                "Operating System :: Unix",
]

include = [
    "HISTORY.md",
    "LICENSE.md",
    "docs/**/*.rst",
    "docs/**/*.py",
]

[tool.poetry.dependencies]
python = "^3.6"

{%- if cookiecutter.command_line_interface|lower == 'click' %}
click = "*"
{%- endif %}
{%- if cookiecutter.command_line_interface|lower == 'argparse' %}
argparse = "*"
{%- endif %}

[tool.poetry.dev-dependencies]
{%- if cookiecutter.use_pytest == 'y' %}
pytest = "*"
{%- endif %}
{%- if cookiecutter.use_black_autoformatter == 'y' %}
black = { version = "*", allows-prereleases = true }
{%- endif %}

[tool.poetry.source]

[tool.poetry.scripts]

# This is not really ideal right now...
# See issues:
#
#    https://github.com/sdispater/poetry/issues/1215
#    https://github.com/sdispater/poetry/issues/241

{{ cookiecutter.project_slug }}_lint = "{{ cookiecutter.project_slug }}_scripts:{{ cookiecutter.project_slug }}_lint"
{{ cookiecutter.project_slug }}_test = "{{ cookiecutter.project_slug }}_scripts:{{ cookiecutter.project_slug }}_test"

{%- if cookiecutter.use_black_autoformatter == 'y' %}
[tool.black]
line-length = 95
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
{%- endif %}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
