[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>", ]
license = "MIT"
readme = "README.md"

homepage = "TODO"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}"
classifiers = [ "Programming Language :: Python :: 3.6",
                "Programming Language :: Python :: 3.7",
                "Programming Language :: Python :: 3.8",
                "License :: Other/Proprietary License",
                "Operating System :: Unix",
]

[tool.poetry.dependencies]
python = "^3.8.9"

{%- if cookiecutter.command_line_interface|lower == 'click' %}
click = "*"
{%- endif %}
{%- if cookiecutter.command_line_interface|lower == 'argparse' %}
argparse = "*"
{%- endif %}

[tool.poetry.dev-dependencies]
{%- if cookiecutter.use_pytest == 'y' %}
pytest = "*"
{%- endif %}
{%- if cookiecutter.use_black_autoformatter == 'y' %}
black = { version = "*", allow-prereleases = true }
{%- endif %}

{%- if cookiecutter.full_feature_list == 'y' %}
mock = "*"
ipdb = "*"
{%- endif %}

[tool.poetry.scripts]

{{ cookiecutter.project_slug }}_executable = "{{ cookiecutter.project_slug }}.scripts.myexecutable:main"

{%- if cookiecutter.use_black_autoformatter == 'y' %}
[tool.black]
line-length = 95
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
{%- endif %}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
